// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel build Node: development 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/interopRequireDefault\\");

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = TestApp;

var _TestComponent = _interopRequireDefault(require(\\"./MockPackageA/TestComponent\\"));

var _jsxRuntime = require(\\"react/jsx-runtime\\");

// eslint-disable-next-line import/no-relative-packages
const styles = {
  \\"sampleClassName\\": \\"-dr-pogodin-react-utils_____tests__-config-stylename-generation-__assets__-style___sampleClassName___QXUpkv\\"
};

const B = require(\\"./MockPackageB/TestComponent\\").default;

function TestApp() {
  return /*#__PURE__*/(0, _jsxRuntime.jsxs)(_jsxRuntime.Fragment, {
    children: [/*#__PURE__*/(0, _jsxRuntime.jsx)(_TestComponent.default, {}), /*#__PURE__*/(0, _jsxRuntime.jsx)(B, {}), JSON.stringify(styles)]
  });
}"
`;

exports[`Babel build Node: development 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = TestComponent;

var _jsxRuntime = require(\\"react/jsx-runtime\\");

const style = {
  \\"testClassName\\": \\"mock-package-a___TestComponent-style___testClassName___pul43I\\"
};

function TestComponent() {
  return /*#__PURE__*/(0, _jsxRuntime.jsx)(\\"div\\", {
    className: \\"mock-package-a___TestComponent-style___testClassName___pul43I\\",
    children: JSON.stringify(style)
  });
}"
`;

exports[`Babel build Node: production 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/interopRequireDefault\\");

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = TestApp;

var _TestComponent = _interopRequireDefault(require(\\"./MockPackageA/TestComponent\\"));

var _jsxRuntime = require(\\"react/jsx-runtime\\");

// eslint-disable-next-line import/no-relative-packages
const styles = {
  \\"sampleClassName\\": \\"QXUpkv\\"
};

const B = require(\\"./MockPackageB/TestComponent\\").default;

function TestApp() {
  return /*#__PURE__*/(0, _jsxRuntime.jsxs)(_jsxRuntime.Fragment, {
    children: [/*#__PURE__*/(0, _jsxRuntime.jsx)(_TestComponent.default, {}), /*#__PURE__*/(0, _jsxRuntime.jsx)(B, {}), JSON.stringify(styles)]
  });
}"
`;

exports[`Babel build Node: production 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = TestComponent;

var _jsxRuntime = require(\\"react/jsx-runtime\\");

const style = {
  \\"testClassName\\": \\"pul43I\\"
};

function TestComponent() {
  return /*#__PURE__*/(0, _jsxRuntime.jsx)(\\"div\\", {
    className: \\"pul43I\\",
    children: JSON.stringify(style)
  });
}"
`;

exports[`Webpack build App: development 1`] = `
"/*!**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\\\
  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[3].use[2]!./node_modules/resolve-url-loader/index.js!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[3].use[4]!./__tests__/config/stylename-generation/__assets__/MockPackageA/TestComponent/style.scss ***!
  \\\\**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/

/*
  Sample multi-line comment
*/
.mock-package-a___TestComponent-style___testClassName___pul43I {
  background: red;
  width: 10px;
  height: 10px;
}

/*!*******************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\\\
  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[3].use[2]!./node_modules/resolve-url-loader/index.js!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[3].use[4]!./__tests__/config/stylename-generation/__assets__/style.scss ***!
  \\\\*******************************************************************************************************************************************************************************************************************************************************************************************************************************/

.-dr-pogodin-react-utils_____tests__-config-stylename-generation-__assets__-style___sampleClassName___QXUpkv {
  color: blue;
}

/*!**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\\\
  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[3].use[2]!./node_modules/resolve-url-loader/index.js!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[3].use[4]!./__tests__/config/stylename-generation/__assets__/MockPackageB/TestComponent/style.scss ***!
  \\\\**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/

/*
  Sample multi-line comment
*/
.-mock-scope-mock-package_b___TestComponent-style___testClassName___-UjGq4 {
  background: red;
  width: 10px;
  height: 10px;
}
"
`;

exports[`Webpack build App: production 1`] = `".pul43I{background:red;height:10px;width:10px}.QXUpkv{color:blue}.-UjGq4{background:red;height:10px;width:10px}"`;

exports[`Webpack build Lib: development 1`] = `
"/*!**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\\\
  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[2].use[2]!./node_modules/resolve-url-loader/index.js!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[2].use[4]!./__tests__/config/stylename-generation/__assets__/MockPackageA/TestComponent/style.scss ***!
  \\\\**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/

/*
  Sample multi-line comment
*/
.mock-package-a___TestComponent-style___testClassName___pul43I {
  background: red;
  width: 10px;
  height: 10px;
}

/*!*******************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\\\
  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[2].use[2]!./node_modules/resolve-url-loader/index.js!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[2].use[4]!./__tests__/config/stylename-generation/__assets__/style.scss ***!
  \\\\*******************************************************************************************************************************************************************************************************************************************************************************************************************************/

.-dr-pogodin-react-utils_____tests__-config-stylename-generation-__assets__-style___sampleClassName___QXUpkv {
  color: blue;
}

/*!**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\\\\
  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[2].use[2]!./node_modules/resolve-url-loader/index.js!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[2].use[4]!./__tests__/config/stylename-generation/__assets__/MockPackageB/TestComponent/style.scss ***!
  \\\\**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/

/*
  Sample multi-line comment
*/
.-mock-scope-mock-package_b___TestComponent-style___testClassName___-UjGq4 {
  background: red;
  width: 10px;
  height: 10px;
}
"
`;

exports[`Webpack build Lib: production 1`] = `
".pul43I{background:red;height:10px;width:10px}.QXUpkv{color:blue}.-UjGq4{background:red;height:10px;width:10px}

/*# sourceMappingURL=style.css.map*/"
`;
